// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifGrid Tests should be render properly 1`] = `
<Fragment>
  <h3
    className="card animate__animated animate__fadeIn"
  >
    Avatar
  </h3>
  <p
    className="card animate__animated animate__flash"
  >
    loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`GifGrid Tests should show items when images are loaded with useFetchGifs 1`] = `
<Fragment>
  <h3
    className="card animate__animated animate__fadeIn"
  >
    Avatar
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      0={
        Object {
          "id": "ABC",
          "title": "Testing",
          "url": "https://localhost.com",
        }
      }
    />
  </div>
</Fragment>
`;
